Add some interactive messages.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
 </head>
 <body>
   <div id="root" style="margin: auto; width: 50%;text-align:center">
+    <!--<h2>將您的台新@GOGO信用卡帳單轉成excel</h2>-->
     <img id="pdf" style="width:10%;display:block;margin-left:auto;margin-right:auto"></img>
     <input type="file" onchange="javascript:onChange(event)" class="text-center"
            accept="application/pdf" style="margin:auto;height:50px">
+    <a href="" id="download"></a>
+    <p id="message"></p>
   </div>
   <script src="./src/parse.js"></script>
   <script>
     function onChange(event) {
+      var a = document.getElementById('download');
+      var p = document.getElementById('message');
+      a.text = '';
+      p.innerHTML = '處理中...'; 
       var files = event.target.files;
       var pdf = files[0];
       lib.parse(pdf).then(result => {
-        console.log(result);
+        if (result.items.length === 0) {
+          console.log('No data.');
+          p.innerHTML = '這期沒有資料。';
+          a.text = '';
+          return;
+        }
         var csv = '';
         var columns = [];
         Object.keys(result.items[0]).forEach(key => { csv += key; csv += ','; columns.push(key); });
@@ -23,16 +35,19 @@
           columns.forEach(col => { csv += row[col]; csv += ','; })
           csv += '\n';
         });
-        var a = document.createElement('a');
         if (a.download !== undefined) {
           var href = 'data:text/csv,' + csv.replace(/\n/g, '%0A');
           a.href = href;
           a.download = pdf.name.replace(/pdf/,'csv');
           a.text = 'Click to download'; 
-          document.getElementById("root").appendChild(a);
+          p.innerHTML = '';
         } else {
+          a.text = '';
+          p.innerHTML = 'without a.download';
         }
       }).catch(err => {
+        p.innerHTML = '抱歉，無法處理這份檔案。';
+        a.text = '';
         console.log(err);
       });
     }
